# todo.rs

./: Cargo.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  model.rs  output.rs  store.rs  vdir.rs
tests/: parity_cli.rs
